--- a/Fridge.html
+++ b/Fridge.html
@@ -1,5 +1,7 @@
 <head>
   <title>Fridge</title>
+  <script   src="https://code.jquery.com/jquery-2.2.3.js"   integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4="   crossorigin="anonymous"></script>
+  <script   src="https://code.jquery.com/ui/1.12.0-rc.1/jquery-ui.js"   integrity="sha256-IY2gCpIs4xnQTJzCIPlL3uUgSOwVQYD9M8t208V+7KA="   crossorigin="anonymous"></script>
 </head>
 
 <body>
